--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   <div class="nebula" id="nebula2" data-depth="0.01"></div>
   <div class="nebula" id="nebula3" data-depth="0.005"></div>
 
-  <!-- ONLY ONE MAIN CONTENT CONTAINER -->
+  <!-- ONLY ONE MAIN CONTENT CONTAINER - THIS IS THE FIX -->
   <div class="container">
     <h1>wxksippa</h1>
     <p class="tagline">music producer | content creator | beatmaker</p>
