--- a/index.html
+++ b/index.html
@@ -233,26 +233,6 @@
     transform: translateY(-3px);
     box-shadow: 0 6px 15px var(--shadow-color);
     }
-
-    /* Styles for the "nothing" message */
-    .dev-message {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #000; /* Solid black background */
-        color: #fff; /* White text */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 3em;
-        font-family: 'Montserrat', sans-serif; /* Applied Montserrat to dev-message */
-        text-transform: uppercase;
-        z-index: 10000; /* Ensure it's on top of everything */
-        pointer-events: none; /* Allow interaction with elements underneath if needed, though not for this use case */
-        font-weight: 900; /* Ensure it's bold like the logo */
-    }
   </style>
 </head>
 <body>
@@ -280,72 +260,9 @@
   </div>
 
   <script>
-    // --- DevTools Detection and Content Replacement ---
-    const devMessage = "nothing"; 
-
-    // Method 1: Using console.log length (works in some browsers, can be inconsistent)
-    const checkDevTools = () => {
-        const threshold = 160; // Approximate character length of "debugger" in console.log
-        if (window.outerWidth - window.innerWidth > threshold || window.outerHeight - window.innerHeight > threshold) {
-            document.body.innerHTML = `<div class="dev-message">${devMessage}</div>`;
-            return true;
-        }
-
-        // Method 2: Using a debugger trap
-        // This is more effective but might cause the browser to pause
-        try {
-            // eslint-disable-next-line no-debugger
-            debugger; 
-        } catch (e) {
-            // If debugger statement is hit, this block won't be reached in normal execution.
-            // If it's caught, DevTools is likely not open or it's a non-debugger browser.
-        }
-
-        // Check if the debugger console is open using a size comparison after attempting debugger
-        // This is a common heuristic, not foolproof.
-        const devtools = /devtool/.test(window.location.search);
-        if (devtools || (window.devtools && window.devtools.isOpen)) { // Some custom DevTools APIs
-            document.body.innerHTML = `<div class="dev-message">${devMessage}</div>`;
-            return true;
-        }
-
-        const isDevToolsOpen = new RegExp(" AppleWebKit/").test(navigator.userAgent) && !/Safari/.test(navigator.userAgent) ?
-            (function() {
-                let div = document.createElement("div");
-                Object.defineProperty(div, "id", {
-                    get: function() {
-                        document.body.innerHTML = `<div class="dev-message">${devMessage}</div>`;
-                    }
-                });
-                console.log(div);
-                return false;
-            })() : false;
-
-        return isDevToolsOpen;
-    };
-
-    // Check on load and periodically
-    window.addEventListener('load', checkDevTools);
-    window.addEventListener('resize', checkDevTools); // DevTools opening often triggers a resize
-
-    // Periodically check (less aggressive than before, to reduce performance impact)
-    // You might want to adjust this interval. Too frequent can be CPU intensive.
-    setInterval(checkDevTools, 1000); // Check every 1 second
-
-    // Overriding console.log (another common method, but can interfere with legitimate console use)
-    /*
-    const originalLog = console.log;
-    console.log = function() {
-        if (arguments.length > 0 && typeof arguments[0] === 'string' && arguments[0].includes('debugger')) {
-            // This is a very simple example and might not be robust enough.
-            // A more complex check would involve parsing the argument or checking stack traces.
-            document.body.innerHTML = `<div class="dev-message">${devMessage}</div>`;
-            return;
-        }
-        originalLog.apply(console, arguments);
-    };
-    */
-    // --- End DevTools Detection ---
+    // --- DevTools Detection and Content Replacement (REMOVED) ---
+    // The previous DevTools detection code has been removed from here.
+    // This ensures the site always displays its content, fixing the "NOTHING" message on mobile.
 
 
     // --- disable right-click (context menu) ---
